fixed links issues on production

--- a/site/src/public/404.html
+++ b/site/src/public/404.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=./index.html" />
+    <meta charset="utf-8" />
+    <script>
+      location.replace(
+        location.origin + "/#" + location.pathname
+      );
+    </script>
   </head>
 </html>
